--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ pip==25.0
 Flask==3.1.0
 flask_cors==5.0.0
 openai==1.60.0
-PyPDF2>=3.9.0
+PyPDF2==3.0.1
 pytest==8.3.4
 python-dotenv==1.0.1
 qdrant_client==1.13.2
